fix design on mobile
fix the heigth of the app

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,12 @@
   box-shadow: 1rem 1rem 1.5rem rgba(0, 0, 0, 0.1);
 }
 
+@media (max-width: 600px){
+  .App{
+    height: 80vh;
+  }
+}
+
 .loader-container{
   display: flex;
   justify-content: center;
